--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -941,6 +941,11 @@ nav {
         &:hover { color: #fff; }
 
     }
+
+    a {
+        color: inherit;
+        text-decoration: underline;
+    }
 }
 
 .notification-success {
