--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,18 @@
+---
+translations:
+  en:
+    installation: 'Installation'
+    usage: 'Usage'
+    email: 'Email'
+    themes: 'Themes'
+    help: 'Help'
+  es:
+    installation: 'Instalación'
+    usage: 'uso'
+    email: 'Email'
+    themes: 'temas'
+    help: 'ayudar'
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +38,7 @@
 
 <header class="navbar navbar-fixed-top bs-docs-nav">
   <nav class="container">
-    <a href="{{ site.url }}/" class="navbar-brand">Ghost Guide</a>
+    <a href="{{ site.url }}/{{page.lang}}/" class="navbar-brand">Ghost Guide</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -32,19 +47,19 @@
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.url }}/installation">Installation</a>
+          <a href="{{ site.url }}/{{page.lang}}/installation">{{page.translations.[page.lang].installation}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/usage">Usage</a>
+          <a href="{{ site.url }}/{{page.lang}}/usage">{{page.translations.[page.lang].usage}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/mail">Email</a>
+          <a href="{{ site.url }}/{{page.lang}}/mail">{{page.translations.[page.lang].email}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/themes">Themes</a>
+          <a href="{{ site.url }}/{{page.lang}}/themes">{{page.translations.[page.lang].themes}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/help">Help</a>
+          <a href="{{ site.url }}/{{page.lang}}/help">{{page.translations.[page.lang].help}}</a>
         </li>
       </ul>
     </div>
