--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ translations:
 
 <header class="navbar navbar-fixed-top bs-docs-nav">
   <nav class="container">
-    <a href="{{ site.url }}/{{page.lang}}/" class="navbar-brand">Ghost Guide</a>
+    <a href="{{ site.url }}/{{page.lang-url}}" class="navbar-brand">Ghost Guide</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -47,19 +47,19 @@ translations:
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.url }}/{{page.lang}}/installation">{{page.translations.[page.lang].installation}}</a>
+          <a href="{{ site.url }}/{{page.lang-url}}installation">{{page.translations.[page.lang].installation}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang}}/usage">{{page.translations.[page.lang].usage}}</a>
+          <a href="{{ site.url }}/{{page.lang-url}}usage">{{page.translations.[page.lang].usage}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang}}/mail">{{page.translations.[page.lang].email}}</a>
+          <a href="{{ site.url }}/{{page.lang-url}}mail">{{page.translations.[page.lang].email}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang}}/themes">{{page.translations.[page.lang].themes}}</a>
+          <a href="{{ site.url }}/{{page.lang-url}}themes">{{page.translations.[page.lang].themes}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang}}/help">{{page.translations.[page.lang].help}}</a>
+          <a href="{{ site.url }}/{{page.lang-url}}help">{{page.translations.[page.lang].help}}</a>
         </li>
       </ul>
     </div>
