--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,18 @@
+---
+translations:
+  en:
+    installation: 'Installation'
+    usage: 'Usage'
+    email: 'Email'
+    themes: 'Themes'
+    help: 'Help'
+  es:
+    installation: 'Instalación'
+    usage: 'uso'
+    email: 'Email'
+    themes: 'temas'
+    help: 'ayudar'
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +38,7 @@
 
 <header class="navbar navbar-fixed-top bs-docs-nav">
   <nav class="container">
-    <a href="{{ site.url }}/" class="navbar-brand">Ghost Guide</a>
+    <a href="{{ site.url }}/{{page.lang-url}}" class="navbar-brand">Ghost Guide</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -32,19 +47,19 @@
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.url }}/installation">Installation</a>
+          <a href="{{ site.url }}/{{page.lang-url}}installation">{{page.translations.[page.lang].installation}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/usage">Usage</a>
+          <a href="{{ site.url }}/{{page.lang-url}}usage">{{page.translations.[page.lang].usage}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/mail">Email</a>
+          <a href="{{ site.url }}/{{page.lang-url}}mail">{{page.translations.[page.lang].email}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/themes">Themes</a>
+          <a href="{{ site.url }}/{{page.lang-url}}themes">{{page.translations.[page.lang].themes}}</a>
         </li>
         <li>
-          <a href="{{ site.url }}/help">Help</a>
+          <a href="{{ site.url }}/{{page.lang-url}}help">{{page.translations.[page.lang].help}}</a>
         </li>
       </ul>
     </div>
@@ -68,6 +83,17 @@
 </main>
 
 <footer id="global-footer">
+    <!-- <div class="dropdown">
+        {% for item in site.languages %}
+        {% if page.lang == item.key %}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class='icon down'></span>{{item.name}}</a>
+        {% endif %}
+        {% endfor %}
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+            <li><a href="{{ site.url }}/">English</a></li>
+            <li><a href="{{ site.url }}/es/">Español</a></li>
+        </ul>
+    </div> -->
   <p>Lovingly created and maintained by <a href="http://john.onolan.org">John O'Nolan</a> + <a href="http://erisds.co.uk">Hannah Wolfe</a> + an amazing group of <a href="https://github.com/TryGhost/Ghost/contributors">contributors</a>.</p>
     <hr>
   <p>All code copyright (C) 2013 The Ghost Foundation - Released under the <a href="http://tryghost.org/about/license.html">MIT</a> License.<br />
