--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,59 @@
 ---
 translations:
-  en:
-    installation: 'Installation'
-    usage: 'Usage'
-    email: 'Email'
-    themes: 'Themes'
-    help: 'Help'
   es:
+    site_title:   'Ghost Guide'
     installation: 'Instalación'
-    usage: 'uso'
-    email: 'Email'
-    themes: 'temas'
-    help: 'ayudar'
+    usage:        'uso'
+    email:        'Email'
+    themes:       'temas'
+    help:         'ayudar'
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{% if page.lang %}{{page.lang}}{% else %}en{% endif %}">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  {% if page.meta_title %}
+  <title>{{ page.meta_title }}</title>
+  {% else %}
+  <title>Ghost Guide</title>
+  {% endif %}
 
-<title>{{ page.title }}</title>
-<link rel="canonical" href="{{ site.url }}{{ page.url }}">
+  {% if page.meta_description %}
+  <meta name="description" content="{{ page.meta_description }}" />
+  {% endif %}
 
-<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" >
-<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
-<!--[if lt IE 9]>
-  <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
-  <script src="{{ site.url }}/assets/js/respond.min.js"></script>
-<![endif]-->
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" >
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
-<link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.ico">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <!--[if lt IE 9]>
+    <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
+    <script src="{{ site.url }}/assets/js/respond.min.js"></script>
+  <![endif]-->
 
-<script type="text/javascript">
-  var analytics=analytics||[];(function(){var e=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group"],t=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var n=0;n<e.length;n++)analytics[e[n]]=t(e[n])})(),analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)};
-  analytics.load("uj8ix0aatc");
-</script>
+  <link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.ico">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
+  <script type="text/javascript">
+    var analytics=analytics||[];(function(){var e=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group"],t=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var n=0;n<e.length;n++)analytics[e[n]]=t(e[n])})(),analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)};
+    analytics.load("uj8ix0aatc");
+  </script>
 
 </head>
-<body class="{{ page.bodyclass }}">
+<body>
 
 <header class="navbar navbar-fixed-top bs-docs-nav">
   <nav class="container">
-    <a href="{{ site.url }}/{{page.lang-url}}" class="navbar-brand">Ghost Guide</a>
+    <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}" class="navbar-brand">
+      {% if page.lang %}
+        {{page.translations.[page.lang].site_title}}
+      {% else %}
+        Ghost Guide
+      {% endif %}
+    </a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -52,19 +62,49 @@ translations:
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.url }}/{{page.lang-url}}installation">{{page.translations.[page.lang].installation}}</a>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}installation/">
+            {% if page.lang %}
+              {{page.translations.[page.lang].installation}}
+            {% else %}
+              Installation
+            {% endif %}
+          </a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang-url}}usage">{{page.translations.[page.lang].usage}}</a>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}usage/">
+            {% if page.lang %}
+              {{page.translations.[page.lang].usage}}
+            {% else %}
+              Usage
+            {% endif %}
+          </a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang-url}}mail">{{page.translations.[page.lang].email}}</a>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}mail/">
+            {% if page.lang %}
+              {{page.translations.[page.lang].email}}
+            {% else %}
+              Email
+            {% endif %}
+          </a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang-url}}themes">{{page.translations.[page.lang].themes}}</a>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}themes/">
+            {% if page.lang %}
+              {{page.translations.[page.lang].themes}}
+            {% else %}
+              Themes
+            {% endif %}
+          </a>
         </li>
         <li>
-          <a href="{{ site.url }}/{{page.lang-url}}help">{{page.translations.[page.lang].help}}</a>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}help/">
+            {% if page.lang %}
+              {{page.translations.[page.lang].help}}
+            {% else %}
+              Help
+            {% endif %}
+          </a>
         </li>
       </ul>
     </div>
@@ -73,16 +113,16 @@ translations:
 
 <main id="main" role="main">
 
-    {% if page.heading %}
-    <header class="bs-header">
-        <div class="container">
-            <h1>{{ page.heading }}</h1>
-            {% if page.subheading %}
-            <p>{{ page.subheading }}</p>
-            {% endif %}
-        </div>
-    </header>
-    {% endif %}
+  {% if page.heading %}
+  <header class="bs-header">
+      <div class="container">
+          <h1>{{ page.heading }}</h1>
+          {% if page.subheading %}
+          <p>{{ page.subheading }}</p>
+          {% endif %}
+      </div>
+  </header>
+  {% endif %}
 
   {{ content }}
 
