--- a/core/server/views/debug.hbs
+++ b/core/server/views/debug.hbs
@@ -19,12 +19,12 @@
                 <fieldset>
                     <div class="form-group">
                         <label>Export</label>
-                        <a href="/ghost/debug/db/export/" class="button-save">Export</a>
+                        <a href="/api/v0.1/db/" class="button-save">Export</a>
                         <p>Export the blog settings and data.</p>
                     </div>
                 </fieldset>
             </form>
-            <form id="settings-import" method="post" action="/ghost/debug/db/import/" enctype="multipart/form-data">
+            <form id="settings-import" method="post" action="/api/v0.1/db/" enctype="multipart/form-data">
                 <fieldset>
                     <div class="form-group">
                         <label>Import</label>
