--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,9 @@
    ========================================================================== */
 
 body {
-    padding-top:60px;
+    padding-top: 60px;
     font-family: 'Open Sans', Lato, sans-serif;
+    font-size: 16px;
     background: #edece4;
 }
 
@@ -33,10 +34,10 @@ a:hover {
 }
 
 h1:before, h2:before {
-    display:block; 
-    content:""; 
-    height:70px; 
-    margin:-70px 0 0; 
+    display:block;
+    content:"";
+    height:70px;
+    margin:-70px 0 0;
 }
 
 .row {
