--- a/core/client/tpl/list-item.hbs
+++ b/core/client/tpl/list-item.hbs
@@ -1,16 +1,16 @@
 <a class="permalink{{#if featured}} featured{{/if}}{{#if page}} page{{/if}}" href="#" title="Edit this post">
     <h3 class="entry-title">{{{title}}}</h3>
     <section class="entry-meta">
-        <time datetime="2013-01-04" class="date">
-            {{#if published}}
-                Published {{date published_at timeago="True"}}
+        {{#if published}}
+            {{#if page}}
+                    <span class="page">Page</span>
             {{else}}
-                <span class="status-draft">Draft</span>
+                <time datetime="{{date published_at format="YYYY-MM-DD hh:mm"}}" class="date">
+                    Published {{date published_at timeago="True"}}
+                </time>
             {{/if}}
-        </time>
-        {{#if page}}
-        | <span class="page">Static Page</span>
+        {{else}}
+            <span class="status-draft">Draft</span>
         {{/if}}
-        {{!<span class="views">1,934</span>}}
     </section>
 </a>
